# PreGraphic

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h
